# specter

./: .gitignore  README.md  cli.py  config.py  pyproject.toml  requirements.txt  specter.toml
analyzer/: claude.py  gemini.py  scorer.py  semgrep.py
output/: formatter.py
parser/: diff.py
rules/llm_patterns/: deprecated_crypto.yaml
src/specter/: cli.py  config.py
src/specter/analyzer/: claude.py  gemini.py  scorer.py  semgrep.py
src/specter/data/rules/llm_patterns/: error_handling.yaml  hardcoded_secrets.yaml  input_validation.yaml  sql_injection.yaml
src/specter/output/: formatter.py
src/specter/parser/: diff.py
src/specter/utils/: format_json.py
tests/: test_config.py  test_formatter.py  test_parser.py  test_scorer.py  test_semgrep.py
utils/: available_vendors.py  format_json.py
