[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "specter"
version = "0.1.0"
description = "AI-powered code auditor for LLM-generated code"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
semgrep = ["semgrep>=1.70.0"]

[project.scripts]
specter = "specter.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"specter.data" = ["*.toml", "rules/**/*.yaml"]
